[package]
name = "speng-hunter"
version = "1.0.0"
edition = "2021"

[dependencies]
bytemuck = "1.12.3"
indoc = "1.0.7"
enigo = "0.0.14"
rand = "0.8.5"
sysinfo = "0.26.8"
windows = { version = "0.42.0", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
] }
